# AndroidMediapipeDemo2

./: .gitignore  RtspProcessor.kt  build_ngrams_sqlite.py  fix_titles.py  rebuild_index.py  temp.txt  test_llm.py  test_ngrams.py
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: part_conf.json
android/app/src/main/assets/conf/: en_US.conf  math2.conf  raw-content2.conf
android/app/src/main/assets/resources/custom/: 10000_noletters.res
android/app/src/main/assets/resources/en_US/: customSK.res  dictionary_export.res
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/google/mediapipe/examples/handlandmarker/: H264Decoder.kt  HandLandmarkerHelper.kt  InkPreviewView.kt  MainActivity.kt  MyScriptApplication.kt  OverlayView.kt  SmartGlassesStreamService.kt
android/app/src/main/java/com/google/mediapipe/examples/handlandmarker/fragment/: CameraFragment.kt
android/app/src/main/java/com/myscript/certificate/: MyCertificate.java
android/app/src/main/res/drawable/: rounded_button_bg.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_camera.xml  info_bottom_sheet.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/references/: Dependencies.kt  MyCertificate.java
android/references/offscreen-interactivity/: build.gradle
android/references/offscreen-interactivity/src/main/: AndroidManifest.xml
(+8 files in other folders)
